--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,21 @@
         text-wrap: balance;
     }
 }
+
+.text-base svg {
+    width: 24px;
+    height: 24px;
+    fill: currentColor;
+}
+
+.text-sm svg {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+}
+
+.text-lg svg {
+    width: 28px;
+    height: 28px;
+    fill: currentColor;
+}
